# TextDefendR

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
attacks/allocine/distilcamembert/none/clean/0/: config.yml  log.txt
attacks/allocine/distilcamembert/textattack/bae/2000/: config.yml  log.txt  results.csv  summary.json
attacks/allocine/distilcamembert/textattack/deepwordbug/10/: config.yml  log.txt  results.csv  summary.json
attacks/allocine/distilcamembert/textattack/deepwordbug/2000/: config.yml  log.txt  results.csv  summary.json
notebooks/: attack_statistics.ipynb  encode_samplewise_features.ipynb  experiment_statistics.ipynb  experiment_statistics_clean_vs_all.ipynb  experiment_statistics_multiclass.ipynb  feature_extraction.ipynb  model_evaluation.ipynb  model_finetuning.ipynb  quickstart.ipynb  run_all_benchmark.ipynb  run_attack.ipynb  run_encode_main.ipynb
scripts/: attack.py  distribute_experiments.py  download_data.py  encode_main.py  generate_attack_dataset.py  generate_catted_dataset.py  make_experiment.py  make_official_dataset_splits.py  run_experiment.py
src/nlp_adversarial_attacks/: data.py  encoder.py  utils.py
src/nlp_adversarial_attacks/attack/: __init__.py  attack.py  model_wrapper.py
src/nlp_adversarial_attacks/batch_encoding/: __init__.py  encode_samplewise_features.py
src/nlp_adversarial_attacks/experiment/: __init__.py  experiment.py  model.py
src/nlp_adversarial_attacks/feature_extraction/: __init__.py  feature_dim_names.py  feature_extractor.py  utils.py
src/nlp_adversarial_attacks/feature_extraction/extractors/: language_model_properties.py  text_properties.py
src/nlp_adversarial_attacks/models/: __init__.py  model_loading.py  target_models.py
src/nlp_adversarial_attacks/reactdetect/feature_extraction/: __init__.py  feature_extractor.py
src/nlp_adversarial_attacks/reactdetect/feature_extraction/extractors/: __init__.py  language_model_properties.py  model_wrappers.py  target_model_properties.py  text_properties.py
src/nlp_adversarial_attacks/reactdetect/models/: base_models.py
src/nlp_adversarial_attacks/reactdetect/utils/: experiment.py  feature_dim_names.py  file_io.py  hashing.py  magic_vars.py  pandas_ops.py
src/nlp_adversarial_attacks/tcab_generation/: attack.py  model.py  utils.py
src/nlp_adversarial_attacks/utils/: hashing.py  magic_vars.py  notebook.py  pandas_ops.py
src/textdefendr/: data.py  encoder.py
src/textdefendr/attack/: __init__.py  model_wrapper.py
src/textdefendr/batch_encoding/: __init__.py  encode_samplewise_features.py
src/textdefendr/experiment/: __init__.py  experiment.py  model.py
src/textdefendr/feature_extraction/: __init__.py  feature_dim_names.py  feature_extractor.py
src/textdefendr/feature_extraction/extractors/: target_model_properties.py  utils.py
src/textdefendr/models/: __init__.py  model_loading.py
src/textdefendr/utils/: hashing.py  magic_vars.py  notebook.py
(+16 files in other folders)
