[tool.poetry]
name = "nlp-adversarial-attacks"
version = "0.1.0"
description = ""
authors = ["Baptiste Pasquier <pasquierbaptiste@hotmail.fr>"]
readme = "README.md"
packages = [{include = "nlp_adversarial_attacks", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.5"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
scikit-learn = "^1.2.1"
torch = "1.13.1"
sentencepiece = "^0.1.97"
textattack = "^0.3.8"
flair = "^0.12.1"
tensorflow = ">=2.10.1,<2.11"
tensorflow-hub = "^0.12.0"
tensorboard = "^2.10.0"
protobuf = "^3.19.6"
s3fs = "^2023.3.0"
pycld2 = [
  {version="^0.41.0", platform="linux"},
  {path="packages/pycld2-0.41-cp310-cp310-win_amd64.whl", platform="win32"}
]
ydata-profiling = "^4.1.0"
tqdm = "^4.64.1"
transformers = "^4.25.1"
evaluate = "^0.4.0"
optimum = "^1.5.2"
imbalanced-learn = "^0.10.1"
lightgbm = "^3.3.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-bugbear = "^23.1.20"
flake8-comprehensions = "^3.10.1"
flake8-simplify = "^0.19.3"
pep8-naming = "^0.13.3"
black = {extras = ["jupyter"], version = "^23.1.0"}
pre-commit = "^3.0.4"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
poethepoet = "^0.18.1"
ipykernel = "^6.21.1"
ipywidgets = ">=7.0,<8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poe.tasks]
init_dev = [
  { cmd = "poetry install --sync" },
  { cmd = "pre-commit install" },
]
torch_cuda = [
  { cmd = "poetry add numpy torch" },
  { cmd = "pip install torch==1.13.1+cu117 --force-reinstall --extra-index-url https://download.pytorch.org/whl/cu117" },
]
